--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+guardscan/
+staticfiles/
+manage.py
+web.config
+temp/
+maintenance_mode_state.txt
+media/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
